style: fix dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,3 +103,24 @@ html {
 .dark textarea {
   border-color: #4a5568 !important; /* border-gray-600 */
 }
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 100 900;
+    src: url("/fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 100 900;
+    src: url("/fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
+}
+
+@theme {
+  --font-inter: 'Inter', 'sans-serif';
+}
+
